jumping nav title bug fix

--- a/static/style/scss/_basenav.scss
+++ b/static/style/scss/_basenav.scss
@@ -2,7 +2,7 @@ header{
 
     nav{
         padding: 20px;
-        width: 100%;
+        width: 100vw;
         @include flex(center,center);
 
         h3{
